 * #9059: Various fixes and enhancements (detailed in #9060 - #9064)
 * #9060: Query results are duplicated when realm-selection is repeated
 * #9062: Wiki-page level-1-title broken on 0.12
 * #9210: /tags page should not have a contextual navigation link 'Cloud'
 * #9521: New install impossible on Trac 0.13dev
   by adding generic db schema upgrade support
 * #11096: Avoid an `OperationalError: too many SQL variables`
 * TagsQuery now supports a context object
 * refactor cloud rendering so it can be used by other plugins
 * fix regression related to missing IWikiChangeListener
 * ensure tags stylesheet is added for macros 
 * log warning for tag providers that don't implement describe_tagged_resource
 * add plugin author email to display something at Trac 0.11 plugin admin page
 * fix an AttributeError specific to the 0.6 release since [2953]
 * fix an Error for `TagCloud` macro when being called without arguments
 * improve formatting of header for `tag_view.html` page template
 * do TagSystem class API cleanup by moving db access to model layer

 new features
 * #2509: Create wiki page from /tags/<tag> page
 * #2708: Add rel-tag microformat to tags list
 * #3610: ListTagged macro should have distinct formatting of closed tickets
 * #3754: Tag redirects to existing wiki page instead of listing tagged pages
 * #3851: TAGS_VIEW not showing page tags along for anonymous
 * #4799: TagCloud should optionally be case-insensitive
   by adding a new option `cloud_caseless_sort`
 * #7787: Add i18n support
 * #8638: Should implement wiki_page_renamed of IWikiChangeListener interface
 * #9058: Let `TAGS_MODIFY` inherited `TAGS_VIEW` for intuitive permissions
 * #9061: Mass tag replacement functionality
 * #9063: Allow excluding realms from queries by default
 * #9064: More rendering options for ListTagged macro and tag-handler
 * #9194: Add unittest and functional test infrastructure
 * #9636: Exclude PageTemplates from tag-extraction